# StreamCiphers

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ChaCha20/: ChaCha20.cpp  ChaCha20.h
CryptMT/: CryptMT.cpp  CryptMT.h
Grain128/: Grain128.cpp  Grain128.h
RC4/: RC4.cpp  RC4.h
StreamCipher/: StreamCipher.h
